@@ -9,11 +9,11 @@ services: mysql
 
 # Set php versions
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
   - 7.0
+  - 7.1
   - hhvm
 
 matrix:
