@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=5.4",
         "symfony/console": "^2.8",
         "container-interop/container-interop": "^1.1"
     },
