@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 3.0.0 (TBD)
 ====================================
+- Fix "reference expected" warnings in PHP 7.1
 - Introduce xPDOContainer providing container-interop implementation
 - Add xPDO\Cache\xPDORedisCache implementation
 - Adopt symfony\console 2.x for CLI scripts
